Add differing information on cards

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- <header class="main-header"> -->
       <!-- Mobile HEADER  -->
-      <div class="mobile-header-container hide-for-desktop">
+      <header class="mobile-header-container hide-for-desktop">
         <span class="left-mobile-header-container">
           <h1 class="name-logo">COFFEEFINDER</h1>
           <img class="mobile-user-img" src="./assets/icons8-user-60.png" alt="user">
@@ -18,7 +18,7 @@
         <div class="hamburger-menu">
           <img class="hamburger-collapse" src="./assets/hamburger-menu.png" alt="hamburger-menu">
         </div>
-      </div>
+      </header>
       <!-- DESKTOP HEADER -->
     <header class="main-header">
       <div class="header-container hide-for-mobile">
@@ -64,7 +64,7 @@
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile">
               <p class="miles-label">MILES</p>
-              <p class="miles">1.2</p>
+              <p class="miles">1.0</p>
             </div>
           </div>
           <!-- card bottom -->
@@ -74,7 +74,7 @@
                 <h3 class="shop-name">
                   Singing Beans
                 </h3>
-                <p class="hours">Opens 9 AM</p>
+                <p class="hours">Opens 9:00 AM</p>
               </div>
               <div class="shop-features">
                 <div class="feature">
@@ -92,7 +92,8 @@
               </div>
             </div>
             <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              <p class="address">66 Bishop St.
+                Pewaukee, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
@@ -131,7 +132,7 @@
                 <h3 class="shop-name">
                   Grind Light
                 </h3>
-                <p class="hours">Opens 9 AM</p>
+                <p class="hours">Opens 9:30 AM</p>
               </div>
               <div class="shop-features">
                 <div class="feature">
@@ -149,7 +150,8 @@
               </div>
             </div>
             <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              <p class="address">7501 Peachtree Lane
+                Eastpointe, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
@@ -178,7 +180,7 @@
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile">
               <p class="miles-label">MILES</p>
-              <p class="miles">1.2</p>
+              <p class="miles">3.0</p>
             </div>
           </div>
           <!-- card bottom -->
@@ -188,7 +190,7 @@
                 <h3 class="shop-name">
                   Ask Me Coffee
                 </h3>
-                <p class="hours">Opens 9 AM</p>
+                <p class="hours">Opens 9:00 AM</p>
               </div>
               <div class="shop-features">
                 <div class="feature">
@@ -206,20 +208,21 @@
               </div>
             </div>
             <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              <p class="address">37 E. Ridgewood Drive
+                Elmhurst, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
                 RATING
               </p>
               <span class="num-rating-container">
-                <p class="number-rating hide-for-mobile">4.5</p>
+                <p class="number-rating hide-for-mobile">5.0</p>
                 <span class="star-container">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
-                  <img class="rating-star" src="./assets/star-half.png" alt="half black half white star">
+                  <img class="rating-star" src="./assets/black-star.png" alt="half black half white star">
                 </span>
               </span>
             </div>
@@ -235,7 +238,7 @@
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile">
               <p class="miles-label">MILES</p>
-              <p class="miles">1.2</p>
+              <p class="miles">3.5</p>
             </div>
           </div>
           <!-- card bottom -->
@@ -245,7 +248,7 @@
                 <h3 class="shop-name">
                   Excess Shot
                 </h3>
-                <p class="hours">Opens 9 AM</p>
+                <p class="hours">Opens 10:00 AM</p>
               </div>
               <div class="shop-features">
                 <div class="feature">
@@ -263,20 +266,20 @@
               </div>
             </div>
             <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              <p class="address">8036 Columbia Road
+                Stroudsburg,, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
                 RATING
               </p>
               <span class="num-rating-container">
-                <p class="number-rating hide-for-mobile">4.5</p>
+                <p class="number-rating hide-for-mobile">4.0</p>
                 <span class="star-container">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
-                  <img class="rating-star" src="./assets/star-half.png" alt="half black half white star">
                 </span>
               </span>
             </div>
@@ -292,7 +295,7 @@
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile">
               <p class="miles-label">MILES</p>
-              <p class="miles">1.2</p>
+              <p class="miles">4.2</p>
             </div>
           </div>
           <!-- card bottom -->
@@ -302,7 +305,7 @@
                 <h3 class="shop-name">
                   Grind Rush
                 </h3>
-                <p class="hours">Opens 9 AM</p>
+                <p class="hours">Opens 5:00 AM</p>
               </div>
               <div class="shop-features">
                 <div class="feature">
@@ -320,20 +323,21 @@
               </div>
             </div>
             <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              <p class="address">522 W. Andover Ave.
+                Raeford, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
                 RATING
               </p>
               <span class="num-rating-container">
-                <p class="number-rating hide-for-mobile">4.5</p>
+                <p class="number-rating hide-for-mobile">5</p>
                 <span class="star-container">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
-                  <img class="rating-star" src="./assets/star-half.png" alt="half black half white star">
+                  <img class="rating-star" src="./assets/black-star.png" alt="black star">
                 </span>
               </span>
             </div>
@@ -350,7 +354,7 @@
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile">
               <p class="miles-label">MILES</p>
-              <p class="miles">1.2</p>
+              <p class="miles">5.1</p>
             </div>
           </div>
           <!-- card bottom -->
@@ -360,7 +364,7 @@
                 <h3 class="shop-name">
                   We Pour Gold
                 </h3>
-                <p class="hours">Opens 9 AM</p>
+                <p class="hours">Opens 6:00 AM</p>
               </div>
               <div class="shop-features">
                 <div class="feature">
@@ -378,16 +382,15 @@
               </div>
             </div>
             <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              <p class="address">1398 Marietta Street, Vallejo, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
                 RATING
               </p>
               <span class="num-rating-container">
-                <p class="number-rating hide-for-mobile">4.5</p>
+                <p class="number-rating hide-for-mobile">3.5</p>
                 <span class="star-container">
-                  <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
@@ -407,7 +410,7 @@
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile">
               <p class="miles-label">MILES</p>
-              <p class="miles">1.2</p>
+              <p class="miles">6.0</p>
             </div>
           </div>
           <!-- card bottom -->
@@ -417,7 +420,7 @@
                 <h3 class="shop-name">
                   Please Add Coffee
                 </h3>
-                <p class="hours">Opens 9 AM</p>
+                <p class="hours">Opens 5:30 AM</p>
               </div>
               <div class="shop-features">
                 <div class="feature">
@@ -435,7 +438,7 @@
               </div>
             </div>
             <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              <p class="address">400 W South Cherry Rd Ste 1100, Naperville, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
@@ -464,7 +467,7 @@
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile">
               <p class="miles-label">MILES</p>
-              <p class="miles">1.2</p>
+              <p class="miles">6.2</p>
             </div>
           </div>
           <!-- card bottom -->
@@ -474,7 +477,7 @@
                 <h3 class="shop-name">
                   Cookie Run
                 </h3>
-                <p class="hours">Opens 9 AM</p>
+                <p class="hours">Opens 9:00 AM</p>
               </div>
               <div class="shop-features">
                 <div class="feature">
@@ -492,20 +495,17 @@
               </div>
             </div>
             <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              <p class="address">161 E South Pine St Ste 1100, Oak Park, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
                 RATING
               </p>
               <span class="num-rating-container">
-                <p class="number-rating hide-for-mobile">4.5</p>
+                <p class="number-rating hide-for-mobile">2.0</p>
                 <span class="star-container">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
                   <img class="rating-star" src="./assets/black-star.png" alt="black star">
-                  <img class="rating-star" src="./assets/black-star.png" alt="black star">
-                  <img class="rating-star" src="./assets/black-star.png" alt="black star">
-                  <img class="rating-star" src="./assets/star-half.png" alt="half black half white star">
                 </span>
               </span>
             </div>
