--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
             <div class="address-container hide-for-mobile">
               <p class="address">8036 Columbia Road
-                Stroudsburg,, CO 80026</p>
+                Stroudsburg, CO 80026</p>
             </div>
             <div class="rating-container">
               <p class="rating-label hide-for-mobile">
